err/simplestats.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplestats'...
Compiling './lib/python3.5/site-packages/simplestats/agreement.py'...
***   File "./lib/python3.5/site-packages/simplestats/agreement.py", line 25
    raise InsufficientData, "Need at least one response to calculate kappa"
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simplestats/comb.py'...
***   File "./lib/python3.5/site-packages/simplestats/comb.py", line 63
    raise ValueError, "input must be of length at least 2"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simplestats/freq.py'...
***   File "./lib/python3.5/site-packages/simplestats/freq.py", line 77
    raise ValueError, "Can't reduce a count below zero"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simplestats/sequences.py'...
***   File "./lib/python3.5/site-packages/simplestats/sequences.py", line 110
    raise ValueError, "need a non-empty input list"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simplestats-0.2.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
